add & edit note rs and js
